feat: 문제 출제 AI 통신 고도화를 구현한다